<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivPerson"
        android:layout_width="334dp"
        android:layout_height="125dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/person" />

    <TextView
        android:id="@+id/tvTittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAuthor"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/tvAbout"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivPerson"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/tvAuthor"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp" />


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTittle"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="-1dp"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvAboutContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/tvAboutContent"
            android:textColor="#000000"
            android:textSize="18sp" />
    </ScrollView>
</RelativeLayout>